Kubernetes-Basic-Advance-Labs/projects-manifest/3rd-project/kubernetes-deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"nginx-cip-ingress-deployment","namespace":"namespace-clusterip-ingress-demo"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"nginx-cip-ingress"}},"template":{"metadata":{"labels":{"app":"nginx-cip-ingress"}},"spec":{"containers":[{"image":"nginx:latest","name":"nginx-cip-ingress","ports":[{"containerPort":80}]}]}}}}
    creationTimestamp: "2024-06-27T05:36:50Z"
    generation: 1
    name: nginx-cip-ingress-deployment
    namespace: namespace-clusterip-ingress-demo
    resourceVersion: "495199"
    uid: 916eec26-2a67-461a-85d0-c6ea0ee5c67c
  spec:
    progressDeadlineSeconds: 600
    replicas: 2
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: nginx-cip-ingress
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: nginx-cip-ingress
      spec:
        containers:
        - image: nginx:latest
          imagePullPolicy: Always
          name: nginx-cip-ingress
          ports:
          - containerPort: 80
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 2
    conditions:
    - lastTransitionTime: "2024-06-27T05:36:53Z"
      lastUpdateTime: "2024-06-27T05:36:53Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2024-06-27T05:36:50Z"
      lastUpdateTime: "2024-06-27T05:36:53Z"
      message: ReplicaSet "nginx-cip-ingress-deployment-6bcb97d68f" has successfully
        progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 2
    replicas: 2
    updatedReplicas: 2
kind: List
metadata:
  resourceVersion: ""
