Kubernetes-Basic-Advance-Labs/projects-manifest/3rd-project/service-3rd-project-via-ingressController.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-cip-ingress-service 
spec: 
  selector:
    app: nginx-cip-ingress
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
