Kubernetes-Basic-Advance-Labs/projects-manifest/3rd-project/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec: 
  rules:
  - host: node01.lab.example.com
  #- host: 172.25.230.188
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: nginx-clusterip
            port:
              number: 80
